adds many region utility classes

--- a/templates/Regions/~global.template.options.hbs
+++ b/templates/Regions/~global.template.options.hbs
@@ -3,7 +3,7 @@
 	{
 		"name": "REGION_TITLE_SIZE",
 		"display_name": "Title Size",
-		"display_sequence": 1,
+		"display_sequence": 100,
 		"is_advanced": "N",
 		"template_options": [
 			{
@@ -77,7 +77,7 @@
 	{
 		"name": "REGION_TEXT_ALIGN",
 		"display_name": "Text Alignment",
-		"display_sequence": 2,
+		"display_sequence": 110,
 		"is_advanced": "N",
 		"template_options": [
 			{
@@ -97,6 +97,188 @@
 				"display_name": "Center",
 				"display_sequence": 2,
 				"css_classes": "text-center"
+			}
+		]
+	},
+	{
+		"name": "REGION_TEXT_COLOR",
+		"display_name": "Text Color",
+		"display_sequence": 800,
+		"is_advanced": "Y",
+		"null_text": "Default",
+		"help_text": "Convey meaning through color with a handful of color utility classes. Includes support for styling links with hover states, too.",
+		"template_options": [
+			{
+				"name": "REGION_TEXT_COLOR_PRIMARY",
+				"display_name": "Primary",
+				"display_sequence": 1,
+				"css_classes": "text-primary"
+			},
+			{
+				"name": "REGION_TEXT_COLOR_SECONDARY",
+				"display_name": "Secondary",
+				"display_sequence": 2,
+				"css_classes": "text-secondary"
+			},
+			{
+				"name": "REGION_TEXT_COLOR_SUCCESS",
+				"display_name": "Success",
+				"display_sequence": 3,
+				"css_classes": "text-success"
+			},
+			{
+				"name": "REGION_TEXT_COLOR_DANGER",
+				"display_name": "Danger",
+				"display_sequence": 4,
+				"css_classes": "text-danger"
+			},
+			{
+				"name": "REGION_TEXT_COLOR_WARNING",
+				"display_name": "Warning",
+				"display_sequence": 5,
+				"css_classes": "text-warning"
+			},
+			{
+				"name": "REGION_TEXT_COLOR_INFO",
+				"display_name": "Info",
+				"display_sequence": 6,
+				"css_classes": "text-info"
+			},
+			{
+				"name": "REGION_TEXT_COLOR_LIGHT",
+				"display_name": "Light",
+				"display_sequence": 7,
+				"css_classes": "text-light"
+			},
+			{
+				"name": "REGION_TEXT_COLOR_DARK",
+				"display_name": "Dark",
+				"display_sequence": 8,
+				"css_classes": "text-dark"
+			},
+			{
+				"name": "REGION_TEXT_COLOR_MUTED",
+				"display_name": "Muted",
+				"display_sequence": 9,
+				"css_classes": "text-muted"
+			},
+			{
+				"name": "REGION_TEXT_COLOR_WHITE",
+				"display_name": "White",
+				"display_sequence": 10,
+				"css_classes": "text-white"
+			}
+		]
+	},
+	{
+		"name": "REGION_BG_COLOR",
+		"display_name": "Background Color",
+		"display_sequence": 810,
+		"is_advanced": "Y",
+		"null_text": "Default",
+		"help_text": "Easily set the background of an element to any contextual class. Anchor components will darken on hover, just like the text classes. Background utilities do not set color.",
+		"template_options": [
+			{
+				"name": "REGION_BG_COLOR_PRIMARY",
+				"display_name": "Primary",
+				"display_sequence": 1,
+				"css_classes": "bg-primary"
+			},
+			{
+				"name": "REGION_BG_COLOR_SECONDARY",
+				"display_name": "Secondary",
+				"display_sequence": 2,
+				"css_classes": "bg-secondary"
+			},
+			{
+				"name": "REGION_BG_COLOR_SUCCESS",
+				"display_name": "Success",
+				"display_sequence": 3,
+				"css_classes": "bg-success"
+			},
+			{
+				"name": "REGION_BG_COLOR_DANGER",
+				"display_name": "Danger",
+				"display_sequence": 4,
+				"css_classes": "bg-danger"
+			},
+			{
+				"name": "REGION_BG_COLOR_WARNING",
+				"display_name": "Warning",
+				"display_sequence": 5,
+				"css_classes": "bg-warning"
+			},
+			{
+				"name": "REGION_BG_COLOR_INFO",
+				"display_name": "Info",
+				"display_sequence": 6,
+				"css_classes": "bg-info"
+			},
+			{
+				"name": "REGION_BG_COLOR_LIGHT",
+				"display_name": "Light",
+				"display_sequence": 7,
+				"css_classes": "bg-light"
+			},
+			{
+				"name": "REGION_BG_COLOR_DARK",
+				"display_name": "Dark",
+				"display_sequence": 8,
+				"css_classes": "bg-dark"
+			},
+			{
+				"name": "REGION_BG_COLOR_WHITE",
+				"display_name": "White",
+				"display_sequence": 9,
+				"css_classes": "bg-white"
+			},
+			{
+				"name": "REGION_BG_G_COLOR_PRIMARY",
+				"display_name": "Primary Gradient",
+				"display_sequence": 10,
+				"css_classes": "bg-gradient-primary"
+			},
+			{
+				"name": "REGION_BG_G_COLOR_SECONDARY",
+				"display_name": "Secondary Gradient",
+				"display_sequence": 11,
+				"css_classes": "bg-gradient-secondary"
+			},
+			{
+				"name": "REGION_BG_G_COLOR_SUCCESS",
+				"display_name": "Success Gradient",
+				"display_sequence": 12,
+				"css_classes": "bg-gradient-success"
+			},
+			{
+				"name": "REGION_BG_G_COLOR_DANGER",
+				"display_name": "Danger Gradient",
+				"display_sequence": 13,
+				"css_classes": "bg-gradient-danger"
+			},
+			{
+				"name": "REGION_BG_G_COLOR_WARNING",
+				"display_name": "Warning Gradient",
+				"display_sequence": 14,
+				"css_classes": "bg-gradient-warning"
+			},
+			{
+				"name": "REGION_BG_G_COLOR_INFO",
+				"display_name": "Info Gradient",
+				"display_sequence": 15,
+				"css_classes": "bg-gradient-info"
+			},
+			{
+				"name": "REGION_BG_G_COLOR_LIGHT",
+				"display_name": "Light Gradient",
+				"display_sequence": 16,
+				"css_classes": "bg-gradient-light"
+			},
+			{
+				"name": "REGION_BG_G_COLOR_DARK",
+				"display_name": "Dark Gradient",
+				"display_sequence": 17,
+				"css_classes": "bg-gradient-dark"
 			}
 		]
 	},
