--- a/src/scss/apex_extends/_typography.scss
+++ b/src/scss/apex_extends/_typography.scss
@@ -1,33 +1,33 @@
-.ab-region-title-size-hidden > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-hidden > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .d-none;
 }
-.ab-region-title-size-display-1 > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-display-1 > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .display-1;
 }
-.ab-region-title-size-display-2 > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-display-2 > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .display-2;
 }
-.ab-region-title-size-display-3 > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-display-3 > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .display-3;
 }
-.ab-region-title-size-display-4 > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-display-4 > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .display-4;
 }
-.ab-region-title-size-h1 > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-h1 > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .h1;
 }
-.ab-region-title-size-h2 > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-h2 > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .h2;
 }
-.ab-region-title-size-h3 > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-h3 > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .h3;
 }
-.ab-region-title-size-h4 > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-h4 > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .h4;
 }
-.ab-region-title-size-h5 > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-h5 > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .h5;
 }
-.ab-region-title-size-h6 > .ab-flex-center > .ab-region-header .ab-region-title {
+.ab-region-title-size-h6 > .ab-region-center > .ab-region-header .ab-region-title {
 	@extend .h6;
 }
