--- a/templates/Pages/Standard.hbs
+++ b/templates/Pages/Standard.hbs
@@ -56,7 +56,7 @@
 	#REGION_POSITION_08#
 
 	<!-- Footer Bottom -->
-	<div class="footer-copyright">
+	<div class="ab-footer-bottom d-flex flex-row justify-content-between">
 		<div class="version">#APP_VERSION#</div>
 		<div class="customize right">#CUSTOMIZE#</div>
 		<div class="screenreader right">#SCREEN_READER_TOGGLE#</div>
