--- a/templates/Regions/Standard.hbs
+++ b/templates/Regions/Standard.hbs
@@ -1,31 +1,30 @@
 {{#template}}
 <div id="#REGION_STATIC_ID#" class="ab-region d-flex flex-row justify-content-between #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
-	<div class="ab-flex-left align-self-center mr-2">#PREVIOUS#</div>
+	<div class="ab-region-left align-self-center mr-2">#PREVIOUS#</div>
 
-	<div class="ab-flex-center w-100">
-		<div class="ab-region-header">
-			<div class="ab-flex-center">
+	<div class="ab-region-center w-100">
+		<div class="ab-region-header d-flex flex-row">
+			<div class="ab-region-left w-100">
 				<div class="ab-region-title"><i class="#ICON_CSS_CLASSES#"></i>#TITLE#</div>
 			</div>
-			<div class="ab-flex-right">#EDIT#</div>
+			<div class="ab-region-right">#EDIT#</div>
 		</div>
 
-		<div class="ab-region-buttons ab-flex-justify">
-			<div class="ab-flex-left">#COPY#</div>
-			<div class="ab-flex-center"></div>
-			<div class="ab-flex-right">#EXPAND#</div>
+		<div class="ab-region-buttons d-flex flex-row justify-content-between">
+			<div class="ab-region-left">#COPY#</div>
+			<div class="ab-region-right">#EXPAND#</div>
 		</div>
 
 		<div class="ab-region-body t-Region-body">#BODY##SUB_REGIONS#</div>
 
-		<div class="ab-region-buttons ab-flex-justify">
-			<div class="ab-flex-left">#CLOSE##HELP#</div>
-			<div class="ab-flex-center">#CHANGE#</div>
-			<div class="ab-flex-right">#DELETE##CREATE##CREATE2#</div>
+		<div class="ab-region-buttons d-flex flex-row justify-content-between">
+			<div class="ab-region-left">#CLOSE##HELP#</div>
+			<div class="ab-region-center">#CHANGE#</div>
+			<div class="ab-region-right">#DELETE##CREATE##CREATE2#</div>
 		</div>
 	</div>
 
-	<div class="ab-flex-right align-self-center ml-2">#NEXT#</div>
+	<div class="ab-region-right align-self-center ml-2">#NEXT#</div>
 </div>
 {{/template}}
 {{#sub_plug_header_template}}
@@ -39,39 +38,7 @@
 {{/sub_plug_template}}
 
 {{#template_option_groups}}
-[
-{
-	"name": "REGION_JUMBOTRON",
-	"display_name": "Jumbotron",
-	"display_sequence": 50,
-	"help_text": "Activates the Jumbotron behavior.",
-	"null_text": "None",
-	"is_advanced": "N",
-	"template_options": [
-	{
-		"name": "JUMBOTRON_NORMAL",
-		"display_name": "Jumbotron Normal",
-		"display_sequence": 1,
-		"css_classes": "jumbotron",
-		"help_text": "This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information."
-	},
-	{
-		"name": "JUMBOTRON_FLUID",
-		"display_name": "Jumbotron Fluid",
-		"display_sequence": 2,
-		"css_classes": "jumbotron jumbotron-fluid",
-		"help_text": "This is a modified jumbotron that occupies the entire horizontal space of its parent."
-	},
-	{
-		"name": "JUMBOTRON_MASTER",
-		"display_name": "Jumbotron Master",
-		"display_sequence": 3,
-		"css_classes": "jumbotron jumbotron-fluid master-jumbotron",
-		"help_text": "Make the jumbotron even bigger."
-	}
-	]
-}
-]
+[]
 {{/template_option_groups}}
 
 {{#template_options}}
